Fix spacing between screens.

--- a/src/Components/Phone1/Phone1.css
+++ b/src/Components/Phone1/Phone1.css
@@ -59,6 +59,9 @@
     margin-right: 0rem;
     margin: 0 1rem;
   }
+  .Phone1 .phone-content {
+    margin-bottom: 6rem;
+  }
   .Phone1 .desktopImg {
     display: none;
   }
